--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>paiza bbs</title>
+        <title>paiza </title>
         <style>body {padding: 10px;}</style>
     </head>
     <body>
