--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -8,11 +8,7 @@
     <body>
         <h1>paiza bbs</h1>
         <p>{{ message }}</p>
-        {% for article in articles %}
-            <p>
-                {{ article.content }},{{ article.user_name }}
-                <a href='{% url "bbs:detail" article.id %}'>詳細</a>
-            </p>
-        {% endfor %}
+        <p>{{ article.content }}, {{ article.user_name }}</p>
+        <p><a href="{% url 'bbs:index' %}">一覧</a></p>
     </body>
 </html>
