--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -10,9 +10,12 @@
         <p>{{ message }}</p>
         {% for article in articles %}
             <p>
-                {{ article.content }},{{ article.user_name }}
-                <a href='{% url "bbs:detail" article.id %}'>詳細</a>
+                {{ article.content }},{{ article.user_name }},
+                <a href="{% url 'app:detail' article.id %}">詳細</a>
             </p>
         {% endfor %}
+        <p>
+            <a href='{% url "app:create" %}'>新規</a>
+        </p>
     </body>
 </html>
