--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -12,6 +12,7 @@
             <p>
                 {{ article.content }},{{ article.user_name }},
                 <a href="{% url 'app:detail' article.id %}">詳細</a>
+                <a href='{% url "app:delete" article.id %}'>削除</a>
             </p>
         {% endfor %}
         <p>
