change .py file

--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset='utf-8'>
-        <title>paiza bbs</title>
-        <style>body {padding: 10px;}</style>
-    </head>
-    <body>
+{% extends './base.html' %}
+{% block content %}
         <h1>paiza bbs</h1>
         <p>{{ message }}</p>
         <p>{{ article.content }}, {{ article.user_name }}</p>
         <p><a href="{% url 'bbs:index' %}">一覧</a></p>
-    </body>
-</html>
+{% endblock %}
