--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,22 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset='utf-8'>
-        <title>paiza bbs</title>
-        <style>body {padding: 10px;}</style>
-    </head>
-    <body>
+{% extends './base.html' %}
+{% block content %}
+
         <h1>paiza bbs</h1>
         <p>{{ message }}</p>
         {% for article in articles %}
             <p>
                 {{ article.content }},{{ article.user_name }},
-                <a href="{% url 'app:detail' article.id %}">詳細</a>
-                <a href='{% url "app:delete" article.id %}'>削除</a>
+                <a href="{% url 'bbs:detail' article.id %}">詳細</a>,
+                <a href="{% url 'bbs:delete' article.id %}">削除</a>
             </p>
         {% endfor %}
+
         <p>
-            <a href='{% url "app:create" %}'>新規</a>
+            <a href="{% url 'bbs:create' %}">新規</a>
         </p>
-    </body>
-</html>
+{% endblock %}
