change .py file

--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -1,7 +1,7 @@
 {% extends './base.html' %}
 {% block content %}
-        <h1>paiza bbs</h1>
-        <p>{{ message }}</p>
-        <p>{{ article.content }}, {{ article.user_name }}</p>
-        <p><a href="{% url 'bbs:index' %}">一覧</a></p>
+    <h1>paiza bbs</h1>
+    <p>{{ message }}</p>
+    <p>{{ article.content }}, {{ article.user_name }}</p>
+    <p><a href='{% url "bbs:index" %}' class='btn btn-outline-primary'>一覧</a></p>
 {% endblock %}
